Fixed the white space issue

--- a/src/components/Resume.css
+++ b/src/components/Resume.css
@@ -1,3 +1,7 @@
+body, html {
+  overflow-x: hidden; /* Prevent horizontal overflow */
+}
+
 .resume-container{
     padding: 60px 0;
     background-color: #050709; 
